[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Split VCF file into intelligible tab-delimited files
download_url = https://github.com/horta/unvcf
keywords = vcf file, genotype, variant call, converter
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = OS Independent, Windows, MacOS, POSIX, POSIX :: Linux
maintainer_email = horta@ebi.ac.uk
name = unvcf
setup_requires = pytest-runner
url = https://github.com/horta/unvcf
version = attr: unvcf.__version__

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    pypandoc>=1.4
    setuptools>=38.4.0
install_requires =
    pandas>=0.22
    dask>=0.16.1
    tqdm>=4.19.5

[aliases]
test = pytest

[tool:pytest]
addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
norecursedirs = .eggs .git *.egg-info build .ropeproject
pep8ignore = E402 E501
